# jomd

./: .replit  README.rst  main.py  pyproject.toml  test.sh
jomd/: README.rst  pyproject.toml
jomd/jomd/: Test.py  __init__.py  screen.py
jomd/jomd/D2/: draw.py
jomd/tests/: test_jomd.py
