[tool.poetry]
name = "jomd"
version = "0.1.0"
description = "A python packages for creating and seeing higher or lower dimensional shapes and objects."
authors = ["Fox551/BadPythonCoder"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
